# flask-api-templates

./: README.md  pyproject.toml
app/: __init__.py
app/api/v1/: __init__.py  demo.py
app/config/: prod.py
app/libs/: bp.py  exceptions.py  jwt.py
app/models/: base.py
app/validators/: __init__.py
