[tool.poetry]
name = "flask-api-templates"
version = "0.1.0"
description = ""
authors = ["seaung <seaung.c0m7de@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
Flask-JWT-Extended = {extras = ["asymmetric_crypto"], version = "^4.4.4"}
flask-sqlalchemy = "^3.0.2"
Flask-WTF = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
